--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
 	"devDependencies": {
+		"@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
 		"@nomicfoundation/hardhat-ethers": "^3.0.5",
-		"@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
 		"@openzeppelin/hardhat-upgrades": "^3.0.4",
 		"ethers": "^6.11.1",
 		"hardhat": "^2.21.0",
 		"solc": "^0.8.20"
 	},
 	"dependencies": {
-		"@nomicfoundation/hardhat-viem": "^1.0.0",
 		"@openzeppelin/contracts": "^5.0.0",
 		"@openzeppelin/contracts-upgradeable": "^5.0.0",
-		"dotenv": "^16.3.1",
-		"openzeppelin-contracts-4.8.3": "npm:@openzeppelin/contracts@^4.9.5",
-		"openzeppelin-contracts-upgradeable-4.8.3": "npm:@openzeppelin/contracts-upgradeable@^4.9.5",
-		"viem": "^1.20.3"
+		"dotenv": "^16.3.1"
 	},
 	"scripts": {
 		"deploy": "source .env && npx hardhat run scripts/deploy.ts --network $DEPLOY_NETWORK",
