--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"devDependencies": {
 		"@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+		"@nomicfoundation/hardhat-viem": "^2.0.0",
 		"@nomicfoundation/hardhat-ethers": "^3.0.5",
 		"@openzeppelin/hardhat-upgrades": "^3.0.4",
 		"ethers": "^6.11.1",
@@ -10,7 +11,8 @@
 	"dependencies": {
 		"@openzeppelin/contracts": "^5.0.0",
 		"@openzeppelin/contracts-upgradeable": "^5.0.0",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"viem": "^2.8.6"
 	},
 	"scripts": {
 		"deploy": "source .env && npx hardhat run scripts/deploy.ts --network $DEPLOY_NETWORK",
