feat: added `hardhat-gas-reporter`

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ BSCSCAN_API_KEY=I9BQEVGKX95HIMX56NH8EW452ZUJ73JSU8
 SHIBUYA_API_KEY=d14a92ede3214e4b8e7a5c7596576b53
 BLAST_SEPOLIA_API_KEY=XJBXN8CWFCYQGF67J4KJAVUD8YEP86RWZA
 
+# gas reporter
+REPORT_GAS=true
+COINMARKETCAP_API_KEY=
+
 # specify path to config file respective to configured chain for deployment
 BSC_TESTNET_CONFIG_FILE_PATH=bsc_testnet.config.json
 SEPOLIA_CONFIG_FILE_PATH=sepolia.config.json
