--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ name: Unit tests
 on:
     pull_request:
         branches: [main]
+        paths:
+            - "contracts/**"
+            - "test/**"
 
 jobs:
     tests:
@@ -17,14 +20,21 @@ jobs:
                   node-version: "18.x"
 
             - name: Cache node modules
-              id: cache-node-modules
-              uses: actions/cache@v3
+              id: cache-nodemodules
+              uses: actions/cache@v2
+              env:
+                  cache-name: cache-node-modules
               with:
+                  # caching node_modules
                   path: node_modules
-                  key: node_modules-${{hashFiles('package.lock.json')}}
+                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-build-${{ env.cache-name }}-
+                      ${{ runner.os }}-build-
+                      ${{ runner.os }}-
 
             - name: Install dependencies
-              if: steps.cache-node-modules.outputs.cache-hit != 'true'
+              if: steps.cache-nodemodules.outputs.cache-hit != 'true'
               run: npm ci && npm i hardhat-gas-reporter
 
             - name: Setup .env config
