chore: updated bp
chore: added test-linux command

(cherry picked from commit 156e7a36ed7743f28dbf6a5f7b6c875762bc2ec9)

chore: vscode settings

(cherry picked from commit d7274220bede56e51f72177108fb4c35f3de5471)

chore: added local aiETH * LIDO deployment script

(cherry picked from commit 621463c7086a52544e695ede46d874aa19b34ddb)

chore: updated hardhat.config.ts & .env

(cherry picked from commit 7d0775a540305f8047c0c4343dbebd4d518a4064)

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
 		"upgrade-bscTestnet": "npx hardhat run scripts/execUpgrade/testnet/upgrade.ts --network bsc_testnet",
 		"upgrade-sepolia": "npx hardhat run scripts/execUpgrade/testnet/upgrade.ts --network sepolia",
 		"verify": "source .env && npx hardhat verify --network $DEPLOY_NETWORK",
-		"install:hardhat-gas-reporter": "npm i --no-save hardhat-gas-reporter"
+		"install:hardhat-gas-reporter": "npm i --no-save hardhat-gas-reporter",
+		"test-linux": "npm run compile && LOG_LEVEL=error npx hardhat test --no-compile",
+		"test-linux:no-compile": "LOG_LEVEL=error npx hardhat test --no-compile"
 	},
 	"packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
 }
