--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@openzeppelin/merkle-tree": "^1.0.8",
 		"@solidstate/contracts": "^0.0.60",
 		"axios": "^1.7.7",
+		"chalk": "^4.1.2",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"dotenv": "^16.3.1",
@@ -31,12 +32,15 @@
 		"deploy-bscTestnet": "npx hardhat run scripts/execDeploy/testnet/deploy.ts --network bsc_testnet",
 		"deploy-sepolia": "npx hardhat run scripts/execDeploy/testnet/deploy.ts --network sepolia",
 		"deploy-localhost": "npx hardhat run scripts/execDeploy/testnet/deploy.ts --network localhost",
-		"clean-compile": "npx hardhat clean && npx hardhat compile",
-		"test": "npx hardhat test",
-		"compile": "npx hardhat compile",
+		"clean-compile": "npx hardhat clean && npx hardhat compile && cp -r artifacts-lido/. artifacts",
+		"test": "set LOG_LEVEL=error&& npm run compile && npx hardhat test --no-compile",
+		"test:no-compile": "set LOG_LEVEL=error&& npx hardhat test --no-compile",
+		"compile": "npx hardhat compile && cp -r artifacts-lido/. artifacts",
 		"node": "npx hardhat node",
 		"upgrade-bscTestnet": "npx hardhat run scripts/execUpgrade/testnet/upgrade.ts --network bsc_testnet",
 		"upgrade-sepolia": "npx hardhat run scripts/execUpgrade/testnet/upgrade.ts --network sepolia",
-		"verify": "source .env && npx hardhat verify --network $DEPLOY_NETWORK"
-	}
+		"verify": "source .env && npx hardhat verify --network $DEPLOY_NETWORK",
+		"install:hardhat-gas-reporter": "npm i --no-save hardhat-gas-reporter"
+	},
+	"packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
 }
