chore: reorganized directories/files
🚨chore: updated bp🚨

Squashed commit of the following:

commit 63f31f02d5a36271c86810624a8e91035f775cd6
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Wed May 21 15:21:05 2025 +0800

    chore: added install `hardhat-gas-reporter`

commit bce188edd1eee4066e35c227e2613d7859a53dbe
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Wed May 21 15:19:22 2025 +0800

    chore: changed init optimization runs

commit a6e0c7fc9b86253437a94b4aa49fcec24cf94b72
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Wed May 21 15:18:47 2025 +0800

    chore: reorganized common deployment script

commit 0cd61c7aa56ae31437b573deaad2acb2d3d1e5fe
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Wed May 21 15:16:17 2025 +0800

    chore: add chalk color for comment log

commit ddd2cc15b3446c35301c233c7e216d5cbb7caa10
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Wed May 21 13:04:14 2025 +0800

    chore: installed chalk

commit b7a9f2e05dd1ed44a802420027d50b4121cc7cba
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Tue May 20 19:54:03 2025 +0800

    chore: added eip712 interfaces

commit 1e791b80d09a4803180d734ca2323b2c6e17145f
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Tue May 20 15:51:51 2025 +0800

    chore: fixed log level

commit 43453ec14cf5e85b67be0fb7ffe98f777ae0aef5
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Mon May 19 21:18:20 2025 +0800

    chore: wildcard `artifacts` in .gitignore

commit 47aa178c4bf9fa49ce8af4a8ae555f72631015c7
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Wed May 21 20:14:14 2025 +0800

    chore: add lido repo submodule

commit 1abb08125dd66bd7d05868d0cb6f5eac34d6b01d
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Mon May 19 01:22:20 2025 +0800

    chore: updated hardhat config

commit 420bea177b2d45bb8f7a15628447e866eac6ec91
Author: wf <wanfakhrulwanazizan15@gmail.com>
Date:   Mon May 19 00:47:11 2025 +0800

    chore: organized boilerplate

(cherry picked 

--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
 		"deploy-bscTestnet": "npx hardhat run scripts/execDeploy/testnet/deploy.ts --network bsc_testnet",
 		"deploy-sepolia": "npx hardhat run scripts/execDeploy/testnet/deploy.ts --network sepolia",
 		"deploy-localhost": "npx hardhat run scripts/execDeploy/testnet/deploy.ts --network localhost",
-		"clean-compile": "npx hardhat clean && npx hardhat compile && cp -r artifacts-lido/. artifacts",
-		"test": "set LOG_LEVEL=error&& npm run compile && npx hardhat test --no-compile",
+		"clean-compile": "npx hardhat clean && npx hardhat compile",
+		"test": "set LOG_LEVEL=error&& npx hardhat test",
 		"test:no-compile": "set LOG_LEVEL=error&& npx hardhat test --no-compile",
-		"compile": "npx hardhat compile && cp -r artifacts-lido/. artifacts",
+		"compile": "npx hardhat compile",
 		"node": "npx hardhat node",
 		"upgrade-bscTestnet": "npx hardhat run scripts/execUpgrade/testnet/upgrade.ts --network bsc_testnet",
 		"upgrade-sepolia": "npx hardhat run scripts/execUpgrade/testnet/upgrade.ts --network sepolia",
 		"verify": "source .env && npx hardhat verify --network $DEPLOY_NETWORK",
 		"install:hardhat-gas-reporter": "npm i --no-save hardhat-gas-reporter",
-		"test-linux": "npm run compile && LOG_LEVEL=error npx hardhat test --no-compile",
+		"test-linux": "LOG_LEVEL=error npx hardhat test",
 		"test-linux:no-compile": "LOG_LEVEL=error npx hardhat test --no-compile"
 	},
 	"packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
